# actix_web-diesel-swagger-boilerplate

./: .env  Cargo.toml  Dockerfile  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-04-15-083834_user/: up.sql
src/: auth.json  auth.rs  constants.rs  main.rs  relations.json  schema.rs
src/models/users/: generated.rs
src/others/: errors.rs  mod.rs  page.rs  pagination.rs
src/routes/: basic.rs  mod.rs
src/routes/users/: generated.rs
