[package]
name = "actix_web-diesel-swagger-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.4", features = ["r2d2", "uuid", "chrono"] }
diesel-async = { version = "0.5.0", features = ["postgres","deadpool"] }
diesel_migrations = "2.2.0"
lazy_static = "1.5.0"
# r2d2 = "0.8"
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"]}
serde_json = "1.0.128"
enclose = "1.1.8"
actix-easy-multipart = "3.0.0"
md5 = "0.7.0"
paperclip = { version = "0.8", features = ["actix4","uuid","chrono","v3"] }
actix-cors = "0.7.0"
http = "1.1.0"
regex = "1.10.6"
actix-governor = "0.5.0"

