[package]
name = "actix_web-diesel-swagger-boilerplate"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["r2d2", "uuid", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres","deadpool"] }
diesel_migrations = "2.2.0"
lazy_static = "1.5.0"
# r2d2 = "0.8"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
serde_json = "1.0.140"
enclose = "1.2.1"
actix-easy-multipart = "3.0.0"
md5 = "0.7.0"
paperclip = { version = "0.9.5", features = ["actix4","uuid","chrono","v3"] }
actix-cors = "0.7.1"
http = "1.3.1"
regex = "1.11.1"
actix-governor = "0.8.0"

